# crm-analysis

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  hello.py  main.py  pyproject.toml
app/: config.py  main.py  test_main.py
