[project]
name = "crm-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.4",
    "polars==1.12.0",
    "pydantic-settings==2.6.0",
    "requests==2.32.3",
]

[project.optional-dependencies]
development = [
  "ruff==0.7.1",
]

testing = [
    "httpx==0.27.2",
    "pytest==8.3.3",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]
