[project]
name = "crm-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.6",
    "polars==1.18.0",
    "pydantic-settings==2.7.0",
    "requests==2.32.3",
]

[project.optional-dependencies]
development = [
  "ruff==0.8.4",
]

testing = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]
