[project]
name = "crm-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.116.1",
    "polars==1.19.0",
    "pydantic-settings==2.7.1",
    "requests==2.32.4",
]

[project.optional-dependencies]
development = [
  "ruff==0.9.1",
]

testing = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]
